refactor: Refactor pet controller and services
